--- a/gradle-java-console-application/gradlejava1-initial/build.gradle
+++ b/gradle-java-console-application/gradlejava1-initial/build.gradle
@@ -1,3 +1,29 @@
 plugins {
   id 'java'
 }
+
+project.version = '0.0.1-SNAPSHOT'
+project.group = "com.denofprogramming"
+
+repositories {
+  mavenCentral()
+}
+
+dependencies {
+  implementation 'org.apache.commons:commons-math3:3.6.1'
+  testImplementation 'junit:junit:4.12'
+}
+
+jar {
+  archivesBaseName = "$project.name-all"
+
+  manifest {
+    attributes 'Implementation-Title' : 'Gradle all inclusive',
+               'Implementation-Version': project.version,
+               'Created-By': 'Shaheen Ghiassy',
+               'Main-Class': 'com.denofprogramming.random.App'
+  }
+
+  println ">>>>> archivesBaseName: $archivesBaseName"
+  println ">>>>> manifest.attributes: $manifest.attributes"
+}
